<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:background="@drawable/widget_preview_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Space
                android:layout_width="2dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/preview_number"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/preview_percent"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_remote_mark"
                android:tint="?android:attr/textColorSecondary"
                android:translationY="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/preview_reset_date"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
